// Copyright 2015 The Cockroach Authors.
// Copyright (c) 2022-present, Shanghai Yunxi Technology Co, Ltd. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// This software (KWDB) is licensed under Mulan PSL v2.
// You can use this software according to the terms and conditions of the Mulan PSL v2.
// You may obtain a copy of Mulan PSL v2 at:
//          http://license.coscl.org.cn/MulanPSL2
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND,
// EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT,
// MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
// See the Mulan PSL v2 for more details.

syntax = "proto2";
package kwbase.storage; // HACK
option go_package = "kvserver";

import "kv/kvserver/raft.proto";
import "kv/kvserver/api.proto";
//import "gogoproto/gogo.proto";

service MultiRaft {
    rpc RaftMessageBatch (stream kwbase.kv.kvserver.RaftMessageRequestBatch) returns (stream kwbase.kv.kvserver.RaftMessageResponse) {}
    rpc RaftSnapshot (stream kwbase.kv.kvserver.SnapshotRequest) returns (stream kwbase.kv.kvserver.SnapshotResponse) {}
}

service PerReplica {
    rpc CollectChecksum(kwbase.kv.kvserver.CollectChecksumRequest) returns (kwbase.kv.kvserver.CollectChecksumResponse) {}
    rpc CollectReplicaStatus(kwbase.kv.kvserver.CollectReplicaStatusRequest) returns (kwbase.kv.kvserver.CollectReplicaStatusResponse) {}
    rpc WaitForApplication(kwbase.kv.kvserver.WaitForApplicationRequest) returns (kwbase.kv.kvserver.WaitForApplicationResponse) {}
    rpc WaitForReplicaInit(kwbase.kv.kvserver.WaitForReplicaInitRequest) returns (kwbase.kv.kvserver.WaitForReplicaInitResponse) {}
}
